cambio fondo acordion

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </div>
       </div>
     </nav>
-
-    <div class="container my-5">
+    <div class="container-fluid bg-secondary">
+    <div class="container my-5 ">
       <div class="accordion" id="cvAccordion">
         <div class="accordion-item">
           <h2 class="accordion-header" id="Accordion-One">
@@ -366,6 +366,7 @@
         });
       </script>
     </div>
+  </div>
 
     <footer class="bg-dark text-white text-center py-3">
       <p>&copy; 2024 Isaías Contreras. Todos los derechos reservados.</p>
